tests-integration/fixtures/checking/1772815800_derive_generic_not_constructor/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms

Types

Derived
derive forall (t :: Type). Generic (Int -> Int) (t :: Type)

Diagnostics
error[CannotDeriveForType]: Cannot derive for type: Int -> Int
  --> 5:1..5:39
  |
5 | derive instance Generic (Int -> Int) _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
